umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_t_795.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 212
bond_count: 106
sum_formula: C107H3AcAgAlAmArAsAtAuBBaBeBiBkBrCaCdCeCfClCmCoCrCsCuDyErEsEuFFeFmFrGaGdGeHeHfHgHoIInIrKKrLaLiLrLuMdMgMnMoNNaNbNdNeNiNoNpOOsPPaPbPdPmPoPrPtPuRaRbReRfRhRnRuSSbScSeSiSmSnSrTaTbTcTeThTiTlTmUVWXeYYbZnZr
graph6: "~?BS`?G?C??G??@????_???@?????G?????C??????G??????@????????_???????@?????????G?????????C??????????G??????????@????????????_???????????@?????????????G?????????????C??????????????G??????????????@????????????????_???????????????@?????????????????G?????????????????C??????????????????G??????????????????@????????????????????_???????????????????@?????????????????????G?????????????????????C??????????????????????G??????????????????????@????????????????????????_???????????????????????@?????????????????????????G?????????????????????????C??????????????????????????G??????????????????????????@????????????????????????????_???????????????????????????@?????????????????????????????G?????????????????????????????C??????????????????????????????G??????????????????????????????@????????????????????????????????_???????????????????????????????@?????????????????????????????????G?????????????????????????????????C??????????????????????????????????G??????????????????????????????????@????????????????????????????????????_???????????????????????????????????@?????????????????????????????????????G?????????????????????????????????????C??????????????????????????????????????G??????????????????????????????????????@????????????????????????????????????????_???????????????????????????????????????@?????????????????????????????????????????G?????????????????????????????????????????C??????????????????????????????????????????G??????????????????????????????????????????@????????????????????????????????????????????_???????????????????????????????????????????@?????????????????????????????????????????????G?????????????????????????????????????????????C??????????????????????????????????????????????G??????????????????????????????????????????????@????????????????????????????????????????????????_???????????????????????????????????????????????@?????????????????????????????????????????????????G?????????????????????????????????????????????????C??????????????????????????????????????????????????G??????????????????????????????????????????????????@????????????????????????????????????????????????????_???????????????????????????????????????????????????@?????????????????????????????????????????????????????G?????????????????????????????????????????????????????C??????????????????????????????????????????????????????G??????????????????????????????????????????????????????@????????????????????????????????????????????????????????_???????????????????????????????????????????????????????@?????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????@????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????@????????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????@????????????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????C"
