umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_test_017.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 44
bond_count: 46
sum_formula: C32N6O6
graph6: khEG___G?GO?_?@????O@??C??G??G?@C??A??@???G??@???A????O??C???@?????O??????????G????C????@?????G????G_??C?O?????G?????G?????G?????A??????A?????C??????G???????O?
