umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_test_018.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 46
bond_count: 48
sum_formula: C34N6O6
graph6: mhEGO_OG@??__?_??_?????C??G??G??C??P?_A???A???O???_??@????_???@???C????O????@???????????@?????G?????_????@?????P???A?G?????@??????O?????C??????O??????C?????A??????@????????_?
