umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_test_024.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 32
sum_formula: C20NO10
graph6: ^?A??A?WCoOQ?@?U??G????????????????O?????????A???B???Co??AAO???@???Ao????H??A??
