umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_test_031.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 30
sum_formula: C20N3O6
graph6: "\\?A??A?WCoOQ?@?U??G?????????????_?????????_??@_G?C_??CH????G???k????C"
