umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_test_034.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 35
bond_count: 36
sum_formula: C12H12O11
graph6: bhEIA?GA?_A?G?G??_C??_??C??????_C??@???G???_??P???O???A???@????_???C????_???@?????G???A?????_?????G??
