umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_test_038.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 40
bond_count: 42
sum_formula: C27N5O8
graph6: gOACC_@A_?_??????????OT????????G??B??@K??GH???@???k????_???????????????????A?????????@??o??O?AO?????_????k?????@?_?????????G?C?????
