umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_without_stereo_label.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 32
sum_formula: C26H3
graph6: "\\kCGGC@?G?_@?@??_?G?@??C??O?C?@G???@???O???_G?@I??@????_???_A????G???"
