umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_indigo_wrong_h_bond.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 24
sum_formula: C16H2B2
graph6: Sl?GSIA?GA?B????_?P?AG?G??G??_??K
